--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/michelledai2020/Hangman-Game#readme",
   "dependencies": {
-    "skeleton": "0.1.2"
+    "skeleton-css": "2.0.4"
   }
 }
